CHANGES-1.3.txt
---------------

CHANGES IN CUPS V1.3.8

	- Documentation updates (STR #2785)
	- "lpstat -p" could report the wrong job as printing (STR #2845)
	- The scheduler would crash when some cupsd.conf directives
	  were missing values (STR #2849)
	- The web interface "move jobs" operation redirected users to
	  the wrong URL (STR #2815)
	- The Polish web interface translation contained errors
	  (STR #2815)
	- The scheduler did not report PostScript printer PPDs with
	  filters as PostScript devices.
	- The scheduler did not set the job document-format attribute
	  for jobs submitted using Create-Job and Send-Document.
	- cupsFileTell() did not work for log files opened in append
	  mode (STR #2810)
	- The scheduler did not set QUERY_STRING all of the time
	  for CGI scripts (STR #2781, STR #2816)
	- The scheduler now returns an error for bad job-sheets
	  values (STR #2775)
	- Authenticated remote printing did not work over domain
	  sockets (STR #2750)
	- The scheduler incorrectly logged errors for print filters
	  when a job was canceled (STR #2806, #2808)
	- The scheduler no longer allows multiple RSS subscriptions
	  with the same URI (STR #2789)
	- The scheduler now supports Kerberized printing with
	  multiple server names (STR #2783)
	- "Satisfy any" did not work in IPP policies (STR #2782)
	- The CUPS imaging library would crash with very large
	  images - more than 16Mx16M pixels (STR #2805)
	- The PNG image loading code would crash with large images
	  (STR #2790)
	- The scheduler did not limit the total number of filters.
	- The scheduler now ensures that the RSS directory has
	  the correct permissions.
	- The RSS notifier did not quote the feed URL in the RSS
	  file it created (STR #2801)
	- The web interface allowed the creation and cancellation
	  of RSS subscriptions without a username (STR #2774)
	- Increased the default MaxCopies value on Mac OS X to
	  9999 to match the limit imposed by the print dialog.