@@ -4,6 +4,8 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.8
 
 	- Documentation updates (STR #2785)
+	- The cups-deviced and cups-driverd helper programs did not set
+	  the CFProcessPath environment variable on Mac OS X (STR #2837)
 	- "lpstat -p" could report the wrong job as printing (STR #2845)
 	- The scheduler would crash when some cupsd.conf directives
 	  were missing values (STR #2849)
